# tabular-data

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: intro.ipynb  simple_pfn.ipynb  tabicl.ipynb  tabicl_classif.ipynb  tabicl_reg.ipynb
tab_utils/: __init__.py  data.py  vis.py
tab_utils/simple_pfn/: __init__.py  classifier.py  model.py
tab_utils/simple_pfn/layers/: __init__.py  embedding.py  transformer.py
